--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL = 'mongodb+srv://kalyanimucharla:VMtcf6LT5KuUGCXt@cluster0.hpif7ne.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-JWT_SECRET='somesuperhardstringtoguess'
+MONGO_URL = ''
+JWT_SECRET=''
 PORT=3001
